k8s-rewrite/charts/media-stack/unpackerr/service.yaml
# Unpackerr Service
apiVersion: v1
kind: Service
metadata:
  name: unpackerr
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 5656
    targetPort: 5656
    name: http
  selector:
    app: unpackerr
