k8s-rewrite/charts/media-stack/unpackerr/ingress.yaml
# Unpackerr Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unpackerr-ingress
  namespace: plex
spec:
  rules:
  - host: unpackerr.branconet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unpackerr
            port:
              number: 5656
